--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+
 body {
 	margin: 0;
-	font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	font-family: "Nunito", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 400;
@@ -20,6 +19,5 @@ body {
 }
 
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
+	font-family: "Nunito", sans-serif;
 }
